2003-02-19  Paolo Bonzino  <bonzini@gnu.org>

	* poll_.h: New file.
	* poll.c: New file.

2003-02-18  Paolo Bonzino  <bonzini@gnu.org>

	* mathl.h: New file.
	* acosl.c: New file.
	* asinl.c: New file.
	* atanl.c: New file.
	* ceill.c: New file.
	* cosl.c: New file.
	* expl.c: New file.
	* floorl.c: New file.
	* frexpl.c: New file.
	* ldexpl.c: New file.
	* logl.c: New file.
	* sincosl.c: New file.
	* sinl.c: New file.
	* sqrtl.c: New file.
	* tanl.c: New file.
	* trigl.c: New file.
	* trigl.h: New file.

2003-02-17  Bruno Haible  <bruno@clisp.org>

	* mkdtemp.h: New file, from GNU gettext.
	* mkdtemp.c: New file, from GNU gettext.

2003-01-31  Bruno Haible  <bruno@clisp.org>

	* rename.c: #undef rename before defining rpl_rename.
	* strnlen.c: #undef strnlen, define rpl_strnlen instead of strnlen.

2003-01-30  Bruno Haible  <bruno@clisp.org>

	* printf-args.h: New file, from GNU gettext.
	* printf-args.c: New file, from GNU gettext.
	* printf-parse.h: New file, from GNU gettext.
	* printf-parse.c: New file, from GNU gettext.
	* vasnprintf.h: New file, from GNU gettext.
	* vasnprintf.c: New file, from GNU gettext.
	* asnprintf.c: New file, from GNU gettext.
	* vasprintf.h: New file, from GNU gettext with modifications.
	* vasprintf.c: New file, from GNU gettext.
	* asprintf.c: New file, from GNU gettext.

2003-01-29  Bruno Haible  <bruno@clisp.org>

	* stpncpy.h: New file, from GNU gettext with modifications.
	* stpncpy.c: New file, from GNU gettext with modifications.

2003-01-28  Bruno Haible  <bruno@clisp.org>

	* c-ctype.h: New file, from GNU gettext, with changes suggested by
	Paul Eggert.
	* c-ctype.c: New file, from GNU gettext, with changes suggested by
	Paul Eggert.

2003-01-27  Bruno Haible  <bruno@clisp.org>

	* xsetenv.h: New file, from GNU gettext.
	* xsetenv.c: New file, from GNU gettext.

2003-01-23  Bruno Haible  <bruno@clisp.org>

	* minmax.h: New file, from GNU gettext, with comments from Paul Eggert.

2003-01-22  Bruno Haible  <bruno@clisp.org>
